--- a/index.html
+++ b/index.html
@@ -34,7 +34,29 @@
             background-color: #ecfdf5;
         }
     </style>
-</head>
+</head><script type="module">
+  // Import the functions you need from the SDKs you need
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/12.2.1/firebase-app.js";
+  import { getAnalytics } from "https://www.gstatic.com/firebasejs/12.2.1/firebase-analytics.js";
+  // TODO: Add SDKs for Firebase products that you want to use
+  // https://firebase.google.com/docs/web/setup#available-libraries
+
+  // Your web app's Firebase configuration
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+  const firebaseConfig = {
+    apiKey: "AIzaSyAcAMCXLexHyccOCJxWGxCcqlFcVX1UlMU",
+    authDomain: "lottery-web-c7a5f.firebaseapp.com",
+    projectId: "lottery-web-c7a5f",
+    storageBucket: "lottery-web-c7a5f.firebasestorage.app",
+    messagingSenderId: "530176543902",
+    appId: "1:530176543902:web:d197d6038f32631fbbbf8f",
+    measurementId: "G-6E09FJ49ZX"
+  };
+
+  // Initialize Firebase
+  const app = initializeApp(firebaseConfig);
+  const analytics = getAnalytics(app);
+</script>
 <body class="lottery-bg min-h-screen">
     <!-- Login Screen -->
     <div id="loginScreen" class="min-h-screen flex items-center justify-center px-4">
